crates/dag-macros/tests/ui/workflow_buffer_max_items_string.stderr
error: buffer! requires `max_items = <integer>`
  --> tests/ui/workflow_buffer_max_items_string.rs:41:42
   |
41 |     buffer!(trigger -> sink, max_items = "10");
   |                                          ^^^^
